# mcp-transcript-contract-tester

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: broken.transcript.json  clean.transcript.jsonl  contract.openapi.json  recorder-snapshot.json  tools.schema.json
src/mcp_transcript_contract_tester/: __init__.py  baseline.py  cli.py  jsonschema_lite.py  models.py  parser.py  reporters.py  schema.py  validators.py
tests/: test_baseline.py  test_cli.py  test_parser.py  test_reporters.py  test_schema.py  test_validators.py
