[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-transcript-contract-tester"
version = "0.1.0"
description = "Offline contract tester for MCP-like and agent tool-calling transcripts."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "mcp-transcript-contract-tester contributors"}
]
keywords = ["mcp", "tool-calling", "agents", "json-rpc", "testing", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
mcp-transcript-contract-tester = "mcp_transcript_contract_tester.cli:main"
mtct = "mcp_transcript_contract_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
testpaths = ["tests"]
